--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build --prefix-paths",
+    "serve": "gatsby serve",
     "develop": "gatsby develop --prefix-paths",
     "format": "prettier --write 'src/**/*.js'",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
