--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build --prefix-paths",
+    "build": "gatsby build",
     "serve": "gatsby serve",
-    "develop": "gatsby develop --prefix-paths",
+    "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "gatsby build && gh-pages -d public -b master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
